--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
+    "watch": "ng build --watch --outputPath=../backend/target/classes/static",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
