--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -65,21 +65,21 @@
                                     <nodeVersion>v10.16.0</nodeVersion>
                                     <npmVersion>6.4.1</npmVersion>
                                 </configuration>
-                                <phase>validate</phase>
+                                <phase>generate-resources</phase>
                             </execution>
                             <execution>
                                 <id>npm install</id>
                                 <goals>
                                     <goal>npm</goal>
                                 </goals>
-                                <phase>validate</phase>
+                                <phase>generate-resources</phase>
                             </execution>
                             <execution>
                                 <id>build dev</id>
                                 <goals>
                                     <goal>npm</goal>
                                 </goals>
-                                <phase>validate</phase>
+                                <phase>generate-resources</phase>
                                 <configuration>
                                     <arguments>run build</arguments>
                                 </configuration>
